# DJANGO

./: .gitignore  README.md  create_admin.py  create_test_article.py  pyproject.toml  requirements.txt
config/: settings.py  urls.py
mi_app/: views.py
templates/: 403.html  base.html  home.html  login.html  menu.html  register.html
templates/registration/: password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  password_reset_form.html  password_reset_subject.txt
users/: admin.py  views.py
