[project]
name = "mi-proyecto-django"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0.1",
    "gunicorn>=25.0.0",
    "psycopg2-binary>=2.9.11",
    "python-decouple>=3.8",
]

[dependency-groups]
dev = [
    "black>=26.1.0",
    "django-debug-toolbar>=6.2.0",
    "flake8>=7.3.0",
    "isort>=7.0.0",
    "pytest-django>=4.11.1",
]
docs = [
    "sphinx>=9.1.0",
    "sphinx-rtd-theme>=3.1.0",
]
lint = [
    "mypy>=1.19.1",
    "ruff>=0.14.14",
]
test = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-django>=4.11.1",
]
